<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <!-- Top section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="12dp">

        <!-- Logo -->
        <ImageView
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_hearu_logo" />

    </LinearLayout>

    <!-- Bottom section with welcome message and buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_top"
        android:orientation="vertical"
        android:padding="32dp">

        <!-- Welcome Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/welcome"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"/>

        <!-- Welcome Description -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/welcome_desc"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <!-- Buttons Container -->
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Login Button -->
            <Button
                android:id="@+id/btnMasuk"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/masuk"
                android:backgroundTint="@color/darkMain"
                android:textStyle="bold"/>

            <!-- Register Button -->
            <Button
                android:id="@+id/btnDaftar"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/daftar"
                android:backgroundTint="@color/darkMain"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>